deploy/k8s/overlays/production/route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gng-api
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  to:
    kind: Service
    name: gng-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
